--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="login-container" class="container">
       <h1>Firenotes</h1>
       <form id="login-form">
+        <input type="email" id="login-email" placeholder="Email" required>
         <input type="password" id="login-passphrase" placeholder="8-digit passphrase" required>
         <button type="submit">Login</button>
       </form>
@@ -27,7 +28,7 @@
       </form>
       <p id="login-link">Already have an account? Login <span id="login-button">here</span></p>
     </div>
-    <div id="home-container" class="container">
+    <div id="home-container" class="hidden">
       <h1>Your Notes</h1>
       <div id="notes-container"></div>
       <form id="note-form">
@@ -36,10 +37,13 @@
       </form>
     </div>
   </div>
+  <div class="alert" style="display: none;"></div>
+  
   <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-database.js"></script>
-  <script src="app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
