feat: redesign welcome page for better user experience

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- header -->
     <header>
-        <h1 id="head">Fire Notes</h1>
+        <a href="#welcome-message"><h1 id="head"><img src="./img/icon2.png">Fire Notes</h1></a>
         <nav>
             <ul>
                 <li><button id="login-link"class="animated-button">
