fix: removing footer from login and register page

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
     
 
-    <footer>
+    <footer id="footer">
         
         <div class="footer-logo"><h1 id="head"><img src="./img/icon2.png">Fire Notes</h1>
         <p style="color: gray;">&copy; 2024 Fire Notes</p>
