--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- header -->
     <header>
-        <a href="#welcome-message"><h1 id="head"><img src="./img/icon2.png">Fire Notes</h1></a>
+        <a id="head" href="#welcome-message"><h1 style="display: flex;align-items: center;"><img src="./img/icon2.png">Fire Notes</h1></a>
         <nav>
             <ul>
                 <li><button id="login-link"class="animated-button">
@@ -167,7 +167,7 @@
     <div class="transition"></div>
     </main>
     <!-- login / register -->
-    <div class="container bg-img">
+    <div class="container hidden bg-img">
 
         <!-- login -->
         <div id="login" class="wrapper hidden">
@@ -238,7 +238,7 @@
 
     <footer id="footer">
         
-        <div class="footer-logo"><h1 id="head"><img src="./img/icon2.png">Fire Notes</h1>
+        <div class="footer-logo"><h1 style="display: flex;align-items: center;"><img style="height: 40px;margin-right: 10px;" src="./img/icon2.png">Fire Notes</h1>
         <p style="color: gray;">&copy; 2024 Fire Notes</p>
         </div>
            <div class="footer-content">
