feat: adding animation for nav if it scrollY in 0

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- header -->
-    <header>
+    <header id="head-nav">
         <a id="head" href="#welcome-message"><h1 style="display: flex;align-items: center;"><img src="./img/icon2.png">Fire Notes</h1></a>
         <nav>
             <ul>
